Show error messages during import in an error stackPage and attach handler to "Start again" buttons

--- a/src/ui/AddSetDialog.ui
+++ b/src/ui/AddSetDialog.ui
@@ -284,6 +284,7 @@
                             <object class="GtkButton">
                               <property name="label" translatable="true">Import more icons</property>
                               <property name="halign">center</property>
+                              <signal name="clicked" handler="onStartAgain"/>
                               <style>
                                 <class name="pill"/>
                               </style>
@@ -322,6 +323,7 @@
                             <object class="GtkButton">
                               <property name="label" translatable="true">Start again</property>
                               <property name="halign">center</property>
+                              <signal name="clicked" handler="onStartAgain"/>
                               <style>
                                 <class name="pill"/>
                               </style>
@@ -370,6 +372,7 @@
                             <object class="GtkButton">
                               <property name="label" translatable="true">Start again</property>
                               <property name="halign">center</property>
+                              <signal name="clicked" handler="onStartAgain"/>
                               <style>
                                 <class name="pill"/>
                               </style>
