--- a/src/ui/SidebarView.ui
+++ b/src/ui/SidebarView.ui
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <interface>
-  <template class="IcoSidebarView">
+  <template class="IcoSidebarView" parent="GtkWidget">
     <property name="layout-manager">
 			<object class="GtkBoxLayout">
 				<property name="orientation">vertical</property>
