--- a/src/ui/IconSetStackView.ui
+++ b/src/ui/IconSetStackView.ui
@@ -20,6 +20,7 @@
                 <property name="setName" bind-source="IcoIconSetStackView" bind-property="setName" bind-flags="sync-create" />
                 <property name="iconsCount" bind-source="IcoIconSetStackView" bind-property="iconsCount" bind-flags="sync-create" />
                 <property name="searchEntryText" bind-source="IcoIconSetStackView" bind-property="searchEntryText" bind-flags="sync-create" />
+                <property name="styleFilter" bind-source="IcoIconSetStackView" bind-property="styleFilter" bind-flags="sync-create" />
               </object>
             </child>
           </object>
