--- a/src/ui/MainPanelView.ui
+++ b/src/ui/MainPanelView.ui
@@ -6,47 +6,57 @@
 				<property name="orientation">vertical</property>
 			</object>
 		</property>
-      <child>
-        <object class="GtkScrolledWindow">
-          <property name="hscrollbar-policy">2</property>
-          <property name="vexpand">true</property>
-          <child>
-            <object class="GtkGridView" id="icons_grid_view">
-              <property name="orientation">1</property>
-              <property name="max-columns">12</property>
-              <property name="margin-start">12</property>
-              <property name="margin-end">12</property>
-              <property name="margin-top">12</property>
-              <property name="margin-bottom">12</property>
-              <property name="overflow">0</property>
-              <style>
-                <class name="iconsGridView" />
-              </style>
-              <property name="model">
-                <object class="GtkSingleSelection" id="icons_selection">
-                  <property name="model">
-                    <object class="GtkFilterListModel" id="icons_filter_model">
-			                <property name="model">
-                        <object class="GtkSortListModel">
-                          <property name="model" bind-source="IcoMainPanelView" bind-property="icons"/>
-                          <property name="sorter">
-		                        <object class="GtkStringSorter">
-			                        <property name="expression">
-				                        <lookup name="label" type="IcoIcon"/>
-			                        </property>
-		                        </object>
-	                        </property>
-                        </object>
-			                </property>
-                    </object>
-                  </property>
-                  <property name="autoselect">false</property>
-                  <signal name="selection-changed" handler="onIconActivated"/>
-                </object>
-              </property>
-            </object>
-          </child>
-        </object>
-      </child>
+    <child>
+      <object class="GtkScrolledWindow" id="icons_grid_view_wrapper">
+        <property name="hscrollbar-policy">2</property>
+        <property name="vexpand">true</property>
+        <child>
+          <object class="GtkGridView" id="icons_grid_view">
+            <property name="orientation">1</property>
+            <property name="max-columns">12</property>
+            <property name="margin-start">12</property>
+            <property name="margin-end">12</property>
+            <property name="margin-top">12</property>
+            <property name="margin-bottom">12</property>
+            <property name="overflow">0</property>
+            <style>
+              <class name="iconsGridView" />
+            </style>
+            <property name="model">
+              <object class="GtkSingleSelection" id="icons_selection">
+                <property name="model">
+                  <object class="GtkFilterListModel" id="icons_filter_model">
+		                <property name="model">
+                      <object class="GtkSortListModel">
+                        <property name="model" bind-source="IcoMainPanelView" bind-property="icons"/>
+                        <property name="sorter">
+	                        <object class="GtkStringSorter">
+		                        <property name="expression">
+			                        <lookup name="label" type="IcoIcon"/>
+		                        </property>
+	                        </object>
+                        </property>
+                      </object>
+		                </property>
+                  </object>
+                </property>
+                <property name="autoselect">false</property>
+                <signal name="selection-changed" handler="onIconActivated"/>
+              </object>
+            </property>
+          </object>
+        </child>
+      </object>
+    </child>
+    <child>
+      <object class="GtkScrolledWindow" id="empty_state">
+        <property name="visible">false</property>
+        <child>
+          <object class="GtkLabel">
+            <property name="label">No icons found</property>
+          </object>
+        </child>
+      </object>
+    </child>
   </template>
 </interface>
