--- a/src/ui/Window.ui
+++ b/src/ui/Window.ui
@@ -216,8 +216,8 @@
         <attribute name="action">win.show-help-overlay</attribute>
       </item>
       <item>
-        <attribute name="label" translatable="yes">_About icon-bear</attribute>
-        <attribute name="action">app.about</attribute>
+        <attribute name="label" translatable="yes">_About Icon Bear</attribute>
+        <attribute name="action">win.open_about_dialog</attribute>
       </item>
     </section>
   </menu>
