Add skeleton code for PreferencesDialog

--- a/src/ui/Window.ui
+++ b/src/ui/Window.ui
@@ -209,7 +209,7 @@
     <section>
       <item>
         <attribute name="label" translatable="yes">_Preferences</attribute>
-        <attribute name="action">app.preferences</attribute>
+        <attribute name="action">win.open_preferences_dialog</attribute>
       </item>
       <item>
         <attribute name="label" translatable="yes">_Keyboard Shortcuts</attribute>
